Bug 181081 - avatar is caught in an unreachable area
Summary: avatar is caught in an unreachable area
Status: RESOLVED FIXED
Alias: None
Product: kapman
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Gallinari
URL:
Keywords:
: 188509 231591 234096 327037 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-01-17 18:09 UTC by Martin Flöser
Modified: 2015-10-29 00:43 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot illustrating the bug (53.34 KB, image/png)
2009-01-17 18:14 UTC, Martin Flöser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Flöser 2009-01-17 18:09:44 UTC
Version:           1.0.0 (using 4.1.96 (KDE 4.1.96 (KDE 4.2 RC1)), Kubuntu packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.27-9-generic

I don't know how I managed to get there, but the avatar is caught in one of the unreachable places completely surrounded by walls. And it is not possible to leave this area again.

I'll attach a screenshot to better understand this bug.
Comment 1 Martin Flöser 2009-01-17 18:14:09 UTC
Created attachment 30353 [details]
Screenshot illustrating the bug
Comment 2 Andrew Pitonyak 2010-01-10 22:40:56 UTC
I believe that this is the same as bug 188509 

I reproduced this bug on Jan 10, 2010 on Fedora 12, 64 bit. I am not, however, able to reproduce at will.
Comment 3 disabled account 2010-01-20 04:00:47 UTC
*** Bug 188509 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Feck 2010-04-14 01:11:11 UTC
*** Bug 234096 has been marked as a duplicate of this bug. ***
Comment 5 JCooper 2010-10-11 08:20:40 UTC
I experience the same issue in v.1.0.0, in KDE 4.5.2, using Kubuntu 10.10.

Avatar gets trapped off and on, in areas such as those where the images of mummies are located, or in any of the rectagular areas the divide the paths that are supposed to be used by the avatar. At that point, the game must be terminated.

I have thought about filing other bug reports about this game, but it is so riddled with so many bugs, I have no idea where to begin. This game is so bad, it really should not be included in KDE games at this point. In fact, I beg all of you to pull this game from your software collection until it receives more fixes. At a minimum, please call it a beta release. This was ready for a '1.0.0' release in the same way that KDE was ready for 4.0.0.... in other words, it is junk in its present state. However, the framework for a decent game is there. (Sorry for the rant.)

Also, the avatar frequently goes through walls, and magically (and unexpectedly) winds up somewhere else on the board for no reasonat all. Is this a related issue?

Also, off and on, the avatar sort of smashes into a divider (sorry, I am not sure how else to describe this) or wall, making it difficult to move the avatar until you manouver it out of this position. Very annoying, and far into bug rather than feature territory.

Simply put, this game has potential, but at this point in time it should be viewed as an utter embarassment to KDE.
Comment 6 Tod Gome 2011-03-07 10:59:16 UTC
I got stuck in the wall too. later I found out it might be an easter egg / hack that let's you pass through walls: up down, down up, left right or right left. I haven't been able to do it intentionally. maybe this key-combo is a little too easy to activate and no solution other than forfeiting your game. Unless you add a 'die' menu option, you're stuck.
Comment 7 Christoph Feck 2013-11-02 14:31:42 UTC
*** Bug 327037 has been marked as a duplicate of this bug. ***
Comment 8 Martin Walch 2014-09-05 15:57:04 UTC
*** Bug 231591 has been marked as a duplicate of this bug. ***
Comment 9 Martin Walch 2015-10-11 23:05:21 UTC
Can you check again with Kapman 1.1.0? Currently, I cannot reproduce this problem any more.
Comment 10 Salvo "LtWorf" Tomaselli 2015-10-12 17:32:28 UTC
I haven't played the game in years! And it was not something reproducible in just 2 minutes of gameplay.

I have no way of knowing whether the issue is still there or not, without playing the game again, and I don't really feel like it, after 5 years of opening the bug.

Close it if you will.
Comment 11 Martin Walch 2015-10-12 21:05:03 UTC
(In reply to Salvo "LtWorf" Tomaselli from comment #10)
> I haven't played the game in years! And it was not something reproducible in
> just 2 minutes of gameplay.

Thank you for your reply. I finally remembered how to have a good chance of triggering the bug, and sadly, I was able to do so. In other words: still there in kapman 1.1.0.
Comment 12 Martin Walch 2015-10-13 09:08:02 UTC
Alright, I have found the bug (kapman.cpp:95-99 does not check if kapman is driving into a wall). However, an easy fix (check if kapman is in the center of a cell etc.) would be seriously ugly. Hopefully I can come up with a proper solution within the next few days.
Comment 13 Martin Walch 2015-10-14 13:13:28 UTC
Well, it is an ugly patch now:

https://git.reviewboard.kde.org/r/125636/

Also, kapman heavily uses the data type qreal which is, depending on the architecture, float or double and relies on floating point equivalence with ==. My proposed patch now also uses this, but I guess in the long term, this is bad and should be re-factored.
Comment 14 Martin Walch 2015-10-29 00:43:21 UTC
Git commit 7393fe984f421635f48e077b1f009febfa098d8b by Martin Walch.
Committed on 14/10/2015 at 12:58.
Pushed by martinwalch into branch 'master'.

Fix bug #181081: "avatar is caught in an unreachable area"

When Kapman makes a half-turn right after taking a turn at a corner, it may
go through an opposing wall.

This fix is rather ugly, but a better solution would probably need quite
some refactoring. So, just fix it for now.

Also merge duplicate code paths in the same function.

M  +10   -0    character.cpp
M  +6    -1    character.h
M  +16   -23   kapman.cpp

http://commits.kde.org/kapman/7393fe984f421635f48e077b1f009febfa098d8b